--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/lasagna.html">Vegan Lasagna</a>
+    <ul>
+        <li><a href="recipes/lasagna.html">Vegan Lasagna</a></li>
+        <li><a href="recipes/hotdog.html">Vegan Hotdog</a></li>
+    </ul>
+
 </body>
 </html>
